<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ic_main_bg"
    tools:context=".SplashScreenActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        tools:ignore="UselessParent">

        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/Logloading"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_gravity="end"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:visibility="invisible"
            app:lottie_autoPlay="true"
            app:lottie_loop="true"
            app:lottie_rawRes="@raw/quizbox_animation" />

        <ImageView
            android:id="@+id/sp_logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:src="@drawable/qb_logo"
            android:contentDescription="@string/todo" />

        <TextView
            android:id="@+id/sp_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="170dp"
            android:fontFamily="@font/roboto"
            android:text="@string/welcome_to_the_quizbox"
            android:textColor="@color/white"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/sp_tv1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/righteous"
            android:text="@string/press_start_to_continue"
            android:textColor="@color/white"
            android:textSize="24sp" />

        <Button
            android:id="@+id/start_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="100dp"
            android:background="@drawable/go_gra_btn"
            android:fontFamily="@font/righteous"
            android:text="@string/start"
            android:textColor="@color/white"
            android:textSize="16sp" />

    </LinearLayout>

</RelativeLayout>