<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="200dp"
    android:background="@color/cat_heading"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/quiz"
        android:textColor="@color/white"
        android:textSize="17sp"
        android:layout_marginStart="23dp"
        android:layout_marginTop="64dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/box"
        android:textColor="@color/white"
        android:fontFamily="@font/roboto_bold"
        android:textStyle="bold"
        android:textSize="55sp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="72dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/learn_and_upgrade"
        android:textColor="@color/white"
        android:textSize="14sp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="135dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="end">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/qq"
            android:layout_gravity="end"
            tools:ignore="ContentDescription" />

    </LinearLayout>

</RelativeLayout>