<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".AboutUsActivity">

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/nav_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:background="@color/white"
        android:theme="@style/nav_theme"
        app:headerLayout="@layout/activity_nav_header_layout"
        app:menu="@menu/list_menu">

    </com.google.android.material.navigation.NavigationView>

    <LinearLayout
        android:id="@+id/main_content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/cat_heading"
        android:orientation="vertical">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <androidx.appcompat.widget.Toolbar
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/cat_heading">

                <Button
                    android:id="@+id/action_menu_presenter"
                    android:layout_width="30dp"
                    android:layout_height="18dp"
                    android:layout_marginStart="20dp"
                    android:background="@drawable/ic_menu_icon" />

                <Button
                    android:id="@+id/back_btn"
                    android:layout_width="40dp"
                    android:layout_height="37dp"
                    android:layout_gravity="end"
                    android:layout_marginEnd="20dp"
                    android:background="@drawable/ic_arrow_back"
                    tools:ignore="RtlHardcoded" />

            </androidx.appcompat.widget.Toolbar>


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ImageView
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:layout_gravity="center"
                android:layout_marginTop="30dp"
                app:srcCompat="@drawable/abt_img"
                android:contentDescription="@string/todo" />


            <TextView
                android:id="@+id/sp_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="100dp"
                android:fontFamily="@font/roboto"
                android:text="@string/about_learn"
                android:textColor="@color/white"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/sp_tv1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="0dp"
                android:fontFamily="@font/righteous"
                android:text="@string/app_Name"
                android:textColor="@color/white"
                android:textSize="36sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="0dp"
                android:fontFamily="@font/roboto"
                android:text="@string/App_Version"
                android:textColor="@color/white"
                android:textSize="14sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <Button
                    android:id="@+id/invite_friends"
                    android:layout_width="170dp"
                    android:layout_height="50dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="50dp"
                    android:background="@drawable/invite"
                    android:text="@string/invite_friends"
                    android:textColor="@color/white" />


                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center">

                    <com.google.android.gms.ads.AdView xmlns:ads="http://schemas.android.com/apk/res-auto"
                        android:id="@+id/abtadView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_alignParentBottom="true"
                        android:layout_centerHorizontal="true"
                        ads:adSize="BANNER"
                        ads:adUnitId="@string/banner_id" />

                </RelativeLayout>

            </LinearLayout>


        </LinearLayout>

    </LinearLayout>

</androidx.drawerlayout.widget.DrawerLayout>