<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="307dp"
    android:layout_height="423dp"
    android:layout_gravity="center"
    android:background="@drawable/fp_bg"
    android:orientation="vertical">

    <Button
        android:id="@+id/close_fp"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:layout_gravity="end"
        android:layout_marginBottom="0dp"
        android:background="@drawable/close_btn"
        tools:ignore="RtlHardcoded" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="top|center"
        app:srcCompat="@drawable/fp_signin_logo"
        android:contentDescription="@string/todo" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:fontFamily="@font/roboto"
        android:text="@string/enter_your_email"
        android:textColor="@color/white"
        android:textSize="14sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="5dp"
        android:fontFamily="@font/roboto"
        android:text="@string/verification_code"
        android:textColor="@color/white"
        android:textSize="14sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="20dp"
        android:orientation="vertical">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/fp_email"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="10dp"
            android:hint="@string/email"
            android:textColorHint="@color/signin_txt_color"
            app:boxCornerRadiusBottomEnd="25dp"
            app:boxCornerRadiusTopStart="25dp"
            app:boxStrokeColor="@color/rad_rectangle_color"
            app:boxStrokeWidth="0.5dp"
            app:errorTextAppearance="@style/Error">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:maxLength="40"
                android:maxLines="1"
                android:textColor="@color/white"
                android:textSize="14sp" />
        </com.google.android.material.textfield.TextInputLayout>


        <Button
            android:id="@+id/verify"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="40dp"
            android:background="@drawable/verify_btn" />

        <ProgressBar
            android:id="@+id/pro_gress"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:visibility="invisible" />

    </LinearLayout>

</LinearLayout>