<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ic_main_bg"
    android:orientation="vertical"
    tools:context="com.ayowainc.demoapk.User.LoginActivity">

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/Logloading"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_gravity="end"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:visibility="invisible"
        app:lottie_autoPlay="true"
        app:lottie_loop="true"
        app:lottie_rawRes="@raw/quizbox_animation" />

    <ImageView
        android:id="@+id/signin_logo"
        android:layout_width="150dp"
        android:layout_height="90dp"
        android:layout_marginTop="40dp"
        android:transitionName="sp_image"
        app:srcCompat="@drawable/sigin_logo"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/hello_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="27dp"
        android:layout_marginTop="40dp"
        android:fontFamily="@font/roboto"
        android:text="@string/sign_hello"
        android:textColor="@color/dark_blue"
        android:textSize="18sp"
        android:textStyle="normal"
        android:transitionName="sp_trans" />


    <TextView
        android:id="@+id/welc_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="27dp"
        android:layout_marginTop="2dp"
        android:fontFamily="@font/righteous"
        android:includeFontPadding="true"
        android:text="@string/sign_welcome"
        android:textColor="@color/dark_blue"
        android:textSize="40sp"
        android:textStyle="bold"
        android:transitionName="sp_trans1" />

    <TextView
        android:id="@+id/signin_to_continue_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="27dp"
        android:layout_marginTop="80dp"
        android:fontFamily="@font/roboto"
        android:text="@string/signin_hint"
        android:textColor="@color/signin_txt_color"
        android:textSize="12sp"
        android:transitionName="signin_cont" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/email"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="10dp"
            android:hint="@string/email"
            android:textColorHint="@color/signin_txt_color"
            android:transitionName="email_trans"
            app:boxCornerRadiusBottomEnd="25dp"
            app:boxCornerRadiusTopStart="25dp"
            app:boxStrokeColor="@color/rad_rectangle_color"
            app:boxStrokeWidth="0.5dp"
            app:errorTextAppearance="@style/Error">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:maxLength="40"
                android:maxLines="1"
                android:textColor="@color/white"
                android:textSize="14sp" />

        </com.google.android.material.textfield.TextInputLayout>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="5dp">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/password"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="10dp"
            android:hint="@string/password"
            android:textColorHint="@color/signin_txt_color"
            android:transitionName="pass_trans"
            app:boxCornerRadiusBottomEnd="25dp"
            app:boxCornerRadiusTopStart="25dp"
            app:boxStrokeColor="@color/rad_rectangle_color"
            app:boxStrokeWidth="0.5dp"
            app:errorTextAppearance="@style/Error"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="@color/rad_rectangle_color">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:maxLength="40"
                android:maxLines="1"
                android:textColor="@color/white"
                android:textSize="14sp" />

        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginTop="0dp"
            android:layout_marginEnd="40dp"
            android:layout_marginBottom="0dp"
            android:fontFamily="@font/roboto"
            android:onClick="forgot_pass"
            android:text="@string/forgot_password"
            android:textColor="@color/white"
            android:textSize="12sp"
            android:transitionName="fp_trans" />

        <Button
            android:id="@+id/go_btn"
            android:layout_width="210dp"
            android:layout_height="70dp"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/signin_go"
            android:transitionName="start_btn_trans" />

        <TextView
            android:id="@+id/signup_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="0dp"
            android:layout_marginBottom="25dp"
            android:fontFamily="@font/roboto"
            android:text="@string/New_User"
            android:textColor="@color/white"
            android:textSize="12sp"
            android:textStyle="bold"
            android:transitionName="new_user_trans" />

    </LinearLayout>

</LinearLayout>