<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="330dp"
    android:layout_height="490dp"
    android:layout_gravity="center"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        tools:ignore="UselessParent">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="60dp"
            android:src="@drawable/pass_bg"
            tools:ignore="ContentDescription" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/sad_img"
            tools:ignore="ContentDescription" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="130dp"
            android:fontFamily="@font/roboto"
            android:gravity="center"
            android:text="@string/sad"
            android:textColor="@color/rad_rectangle_color"
            android:textSize="25sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="180dp"
            android:fontFamily="@font/roboto_bold"
            android:gravity="center"
            android:text="@string/fifty_score"
            android:textColor="@color/white"
            android:textSize="45sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="240dp"
            android:fontFamily="@font/roboto"
            android:gravity="center"
            android:text="@string/try_agin"
            android:textColor="@color/white"
            android:textSize="13sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center">

            <Button
                android:id="@+id/share_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="90dp"
                android:background="@drawable/share_social_btn" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center">

            <Button
                android:id="@+id/try_again_btn"
                android:layout_width="160dp"
                android:layout_height="50dp"
                android:layout_marginTop="200dp"
                android:background="@drawable/main_btn"
                android:text="@string/try_agin"
                android:textColor="@color/white" />

        </LinearLayout>

    </RelativeLayout>

</LinearLayout>